# bzmm

./: .gitignore  README.md  flake.nix  package.json  set_version.sh  tailwind.config.js  vite.config.ts
docs/: mod_enabling.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/mods/: deprecated.rs  download_queue.rs  downloader.rs  extraction.rs  handlers.rs  mod.rs  mod_download.rs  mod_management.rs  mod_utils.rs  parser.rs  progress.rs  sideload.rs  types.rs  xml_cache.rs
src-tauri/src/mods/mod_enablement/: directory_ops.rs  file_operations.rs  mod.rs  patching.rs
src/components/: CategoryList.tsx  CriticalErrorBanner.tsx  DeleteProfileDialog.tsx  DirectoryPicker.tsx  ErrorBanner.tsx  FormField.tsx  GlobalErrorHandler.tsx  LoadingStates.tsx  ModCard.tsx  ModCardActions.tsx  ModCardDescription.tsx  ModCardHeader.tsx  ModCardProgress.tsx  ModList.module.css  ModList.tsx  ModManager.tsx  ModManagerContent.tsx  ModManagerHeader.tsx  ModManagerSidebar.tsx  ModManagerWrapper.tsx  ProfileList.tsx  ProfileListItem.tsx  ProfileSettingsDialog.tsx  SettingsDialog.tsx  SettingsForm.tsx  SetupWarning.tsx
src/components/context/: DownloadContext.tsx
src/components/hooks/: useAppVersion.ts  useCategoryActions.ts  useDownloadState.ts  useModActions.ts  useModData.ts  useModFiltering.ts  useProfileSettings.ts  useProfiles.ts  useSettings.ts
src/components/theme/: theme-provider.tsx  theme-toggle.tsx
src/data/: mockData.ts
src/types/: types.ts
(+3 files in other folders)
