[package]
name = "bzmm"
version = "0.3.4"
description = "Borderzone Mod Manager"
authors = ["Borderzone"]
edition = "2021"

[lib]
name = "bzmm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tokio = { version = "1.42.0", features = ["fs", "full", "io-util"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
thiserror = "2.0.9"
tauri-plugin-dialog = "2"
directories = "5.0.1"
futures-util = "0.3.30"
zip = "0.6"
tauri-plugin-updater = "2.3.1"
semver = "1.0.24"
sha2 = "0.10.8"                                                      # Added for hashing repo URLs
tokio-util = "0.7.15"
